Add SearchView on ActionBar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,9 @@ plugins {
 android {
     compileSdk 32
 
+buildFeatures{
+    viewBinding true
+}
     defaultConfig {
         applicationId "com.example.challenge"
         minSdk 21
